# WeaveLauncher

./: Cargo.toml  README.md  index.html
src/: app.rs  lib.rs  main.rs  util.rs
src/api/: mod.rs
src/api/auth/: mod.rs
src/api/instances/: instance.rs  mod.rs
src/api/java/: mod.rs
src/api/mc/: assets.rs  clientjar.rs  launch.rs  libraries.rs  mod.rs  versions.rs
src/api/tasks/: mod.rs
src/ui/: app.rs  mod.rs
src/ui/pages/: create_instance.rs  mod.rs
src/ui/widgets/: InstanceWidget.rs  mod.rs
