[package]
name = "weave"
version = "0.1.0"
authors = ["ParadigmMC Contributors"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
anyhow = "1.0"
dirs = "5.0"
lazy_static = "1.4.0"
clap = "4.3"
console = "0.15"
dialoguer = "0.10"
futures = "0.3"
indicatif = "0.17"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

regex = "1.8"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.6"
tokio = { version = "1.28", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.7"
walkdir = "2.3"
zip = "0.6"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
